--- a/2.html
+++ b/2.html
@@ -13,6 +13,6 @@
         <li><a href="3.html">JavaScript</a></li>
     </ol>
     <h2>CSS</h2>
-    <p>CSS에 대한 내용입니다.</p>
+    <p>CSS에 대한 내용입니다. 저는 여기를 수정했습니다.</p>
 </body>
 </html>
